[package]
name = "prost_reflect_o3"
version = "0.1.0"
edition = "2024"

[lib]
name = "prost_reflect_o3"

[dependencies]
bytes = "1.11.1"
prost = "0.14.3"
prost-reflect = { version = "=0.16.2", features = ["serde"] }
prost-types = "0.14.3"
pyo3 = { version = "0.28.2", features = ["auto-initialize"] }
serde_json = "1.0.149"
titlecase = "3.6.0"
